--- a/config/default.conf
+++ b/config/default.conf
@@ -5,10 +5,12 @@ server {
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
+        try_files $uri $uri/ /index.html;
     }
    
     location =  /index.html {
         root   /usr/share/nginx/html;
+        
     }
     
     location  /api/ {
